--- a/src/pages/SignMessage/styles.module.scss
+++ b/src/pages/SignMessage/styles.module.scss
@@ -153,10 +153,6 @@
 
             &::-webkit-scrollbar {
               width: 3px;
-            }
-
-            &::-webkit-scrollbar {
-              width: 3px;
               height: 3px;
             }
 
